--- a/css/estilos.css
+++ b/css/estilos.css
@@ -66,6 +66,28 @@
     background-image: linear-gradient(to right, rgb(89, 188, 245), rgb(247, 89, 247) );
 }
 
+.color-change-2x {
+	-webkit-animation: color-change-2x 1s linear infinite alternate both;
+	        animation: color-change-2x 1s linear infinite alternate both;
+}
+
+@-webkit-keyframes color-change-2x {
+    0% {
+      background: #19dcea;
+    }
+    100% {
+      background: #b22cff;
+    }
+  }
+  @keyframes color-change-2x {
+    0% {
+      background: #19dcea;
+    }
+    100% {
+      background: #b22cff;
+    }
+  }
+
 .main {
     display: flex;
     
@@ -258,6 +280,8 @@
 }
 
 
+
+  
 
 
 @media screen and (max-width:1024px) {
